[package]
name = "sparseset"
version = "1.0.1"
authors = ["François-Xavier Bourlet <bombela@gmail.com>"]
license = "MIT"
repository = "https://github.com/bombela/sparseset"
documentation = "http://bombela.github.io/sparseset"
description = "A Sparse Set"
keywords = ["sparse", "set", "collection"]
edition = "2018"
